[package]
name = "rusty-weather-station"
version = "0.1.0"
authors = ["Andreas Resch <andreas@resch.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.11.3"
linux-embedded-hal = "0.2.0"
bme280 = "0.1.2"
diesel = { version = "1.4.2", features = ["postgres", "numeric", "chrono"] }
dotenv = "0.9.0"
chrono = { version = "0.4.9", features = ["serde"] }
bigdecimal = { version = "0.0.14", features = ["serde"] }
utc = "0.1.0"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0"
